# Tdd_gtest

./: CMakeLists.txt
src/: main.cpp  main_test.cpp
src/App/: App.cpp  App.h  CMakeLists.txt
src/testCases/: CMakeLists.txt  test_cases.cpp  test_cases.h
